# compiler-py

./: README.md  compiler.py  pyproject.toml  q3-report.yaml
ddf/: __init__.py  __main__.py
ddf_pptx/: __init__.py  __main__.py
declarativedocs/: __init__.py
declarativedocs/pptx/: __init__.py  compiler.py
examples/: q3-report.pptx
